--- a/index.html
+++ b/index.html
@@ -94,11 +94,8 @@
         </div>
         <form action="Новый скилл">
             <input type="Новый скилл" placeholder="Новый скилл">
+            <input type="button" value="Добавить">
         </form>
-        <div>
-            <button>
-                Добавить
-            </button>
         </div>
         <hr>
         <!-- 5) Создай здесь однострочное поле для ввода текста с подсказкой "Новый скилл", которая исчезает, когда начинаешь что-то печатать (для подсказки есть специальный атрибут) -->
